# steam-recsys-api

./: Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
app/api/: endpoints.py
app/models/: schemas.py
app/services/: __init__.py  recsys_service.py
data/: idx2id.json
